--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<a href="#skills" data-toggle="tab"><i class="fa fa-database"></i><span>Skills</span></a>
 					<a href="#projects" data-toggle="tab"><i class="fa fa-th-large"></i><span>Projects</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
+					<a href="#school" data-toggle="tab"><i class="fa fa-spinner"></i><span>Milestone</span></a>
 				</div>
 
 				<div class="tab-content">
@@ -34,7 +35,7 @@
 						<h3><b>About</b></h3>
 						<hr/>
 						<p>
-							Hi, I am Twinkle Chawla. I am a curious student, currently pursuing B.Tech in Compurer Science from Arya College Of Engg. & I.T., Jaipur. I am a web developer and Open source enthusiast. I am <b>Red Hat Certified System Adminstrator</b>. I am an active member of Mozilla and a <b>Firefox Student Ambassador</b>.<br>
+							Hi, I am Twinkle Chawla. I am a curious student, currently pursuing B.Tech in Compurer Science from Rajasthan Technical University. I am a web developer and Open source enthusiast. I am <b>Red Hat Certified System Adminstrator</b>. I am an active member of Mozilla and a <b>Firefox Student Ambassador</b>.<br>
 							I enjoy seeking logics and troubleshooting their miscellaneosness. I love to stir up my technical skills with my creative ideas. My simplicity and positivity makes me throne or cut above the rest.
 						</p>
 					</div>
@@ -49,11 +50,13 @@
 								<br> 
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
+										<i class="fa fa-html5"></i>
 										<a href="#"><h3 class="skilltext">HTML</h3></a>
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
+										<i class="fa fa-css3"></i>
 										<a href="#"><h3 class="skilltext">CSS</h3></a>
 									</div>
 								</div>
@@ -116,26 +119,29 @@
 						<hr/>
 						<div class="container-fluid">	
 							<div class="row">
-								<div class="col-md-6 col-sm-6 col-xs-6 col-mob">
-									<div class="ui-item">
+								<tr>
+									<div class="ui-item" class="col-md-6">
 										<h5 class="skilltext"><a href="https://github.com/TwinkleChawla/Stephen_Hawking" style="color:#32C8DE">Stephen Hawking</a></h5>
+										<a href="https://github.com/TwinkleChawla/Stephen_Hawking"><img src="img/step.png" width="40%" height="40%" ></a>
 										<p class="projtext">This app is a documentary app which reveals you about The Stephen Hawking , the man with the silver thoughts.</p>
 									</div>
-								</div>
-							
-								<div class="col-md-6 col-sm-6 col-xs-6 col-mob">
+								</tr>
+								<hr>
+								<tr>
 									<div class="ui-item">
 										<h5 class="skilltext"><a href="https://github.com/TwinkleChawla/Plateform_Assignment" style="color:#32C8DE">Platform Assingment</a></h5>
+										<a href="https://github.com/TwinkleChawla/Plateform_Assignment"><img src="img/plateform.jpg" width="40%" height="40%" style="margin-left:200px"></a>
 										<p class="projtext">This page will give user information about a train’s Arrival time, Departure time, Delay time.</p>
 									</div>
-								</div>
-								<br>
-								<div class="col-md-6 col-sm-6 col-xs-6 col-mob">
+								</tr>
+								<hr>
+								<tr>
 									<div class="ui-item">
 										<h5 class="skilltext"><a href="https://github.com/TwinkleChawla/TopCoderHackathon" style="color:#32C8DE">Catastrophe Aid</a></h5>
+										<a href="https://github.com/TwinkleChawla/TopCoderHackathon"><img src="img/cat.png" width="40%" height="40%" style="margin-left:200px"></a>
 										<p class="projtext">An application that would allow you to easily find both historical and current data on humanitarian. Reports have been made since 1996, so that, Homosapiens can have preparedness for natural disasters, and to evaluate their response capabilities.</p>
 									</div>
-								</div>
+								</tr>
 								<br>
 							</div>
 						</div>
@@ -155,6 +161,40 @@
 								<a href="https://plus.google.com/112546099252846134640/posts"><i class="fa fa-google-plus google-plus"></i></a>
 								<a href="https://github.com/TwinkleChawla"><i class="fa fa-github-alt github"></i></a>
 							</div>
+						</div>
+					</div>
+
+					<div class="tab-pane fade clearfix" id="school">
+						<h3><b>Milestone</b></h3>
+						<hr/>
+						<br>
+						<div class="ui-cdetails">
+							<h4>School:</h4>
+							<ul>
+								<p>
+								<li>I did my schooling from St. Peter's Sr. Secondary School.</li>
+								<li>I was involved in the disciplain, art and dance commity.</li>
+								<li>I was the house captain for 2 years.</li>
+								<li>I coordinated many events like Sports Day and Annuals Day.</li>
+								<li>I was one of the assembly coordinator too.</li>
+								<li>I stood 1st in Quiz Competition.</li>
+								<li>I participated in science and maths olimpiards.</li>
+								<li>I participated in Debate Competitions.</li>
+								</p>
+							</ul>
+							<hr>
+							<h4>College:</h4>
+							<ul>
+								<p>
+								<li>I am pursuing B.Tech. from Rajasthan Technical University.</li>
+								<li>I became Miss Fresher 1st Runner up.</li>
+								<li>I was the winner of Gyration (Dance) in Shradhanjali.</li>
+								<li>I became Firefox Student Ambassador and Red Hat Certified System Administrator.</li>
+								<li>I attended Hacking workshop.</li>
+								<li>I am a member of Mozilla Community.</li>
+								<li>I attended Makers Party - Jaipur and Top Coders - Jaipur.</li>
+								</p>
+							</ul>
 						</div>
 					</div>
 				</div>
