--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</div>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
-										<img src="img/boot.png">
+										<img src="img/boot.png" width="60%">
 									<!-- 	<a href="#"><h3 class="skilltext">jQuery</h3></a> -->	
 									</div>
 								</div>
@@ -85,13 +85,13 @@
 								</div>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
-										<img src="img/sql.png" id="sqlimg">
+										<img src="img/mysql.jpeg" width="65%">
 										<!-- <a href="#"><h3 class="skilltext">MySQL</h3></a> -->	
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
-										<img src="img/git.png">
+										<img src="img/git.png" width="60%">
 										<!-- <a href="#"><h3 class="skilltext">Github</h3></a> -->	
 									</div>
 								</div>
@@ -102,7 +102,7 @@
 								<br>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
-										<img src="img/ubun.png">
+										<img src="img/ubun.png" width="60%">
 										<!-- <a href="#"><h3 class="skilltext">Ubuntu</h3></a> -->
 									</div>
 								</div>
