--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<p>
 								<li>Have done my schooling from St. Peter's Sr. Secondary School, Bharatpur.</li>
 								<li>Member of Discipline, Art and Dance community.</li>
-								<li>House captain for 2 years.</li>
+								<li>House captain for 1 year.</li>
 								<li>Co-ordinated events like Sports Day and Annuals Day.</li>
 								<li>Stood 1st in Science Quiz Competition.</li>
 								<li>Participated in science and maths olympiad.</li>
@@ -194,7 +194,7 @@
 						<br>
 						<div class="ui-cdetails">
 							<h3><i class="fa fa-envelope"></i> <a href="mailto:twinkle1chawla@gmail.com"> twinkle1chawla@gmail.com</a></h3>
-							<h3><i class="fa fa-comments-o"></i><a href="twinklechawla">  IRC: twinklechawla</a></h3>
+							<h3><i class="fa fa-comments-o"></i>  IRC-nick: twinklechawla</h3>
 							<br>
 							<div class="ui-social">
 								<a href="https://www.facebook.com/twinkle.chawla.9659"><i class="fa fa-facebook facebook"></i></a>
