--- a/pages/plat.html
+++ b/pages/plat.html
@@ -29,7 +29,7 @@
 						</p>
 						<h3>Abstract:</h3>
 						<p class="pstep">
-						This project was given me by 'Precise com-------'. At that time, I was unaware of how to create and manage databases, and this project has no value apart of its database. That's why I studied database management. And successfully completed the task, scoring A+ grade.
+						It was a mini project assigned by our class mentor. In this project I learned creating and managing database. And successfully completed the task, scoring A+ grade.
 						</p>
 						<h3>Technologies:</h3>
 						<p class="pstep">
