--- a/pages/step.html
+++ b/pages/step.html
@@ -30,16 +30,13 @@
  						</p>
 						<h3>Absract:</h3>
 						<p class="pstep">
-						This was my first application named 'Stephen Hawking' and has submitted to Mozilla Marketplace. This has two versions -V1.0 and -V2.0. The first version was made in January, 2015 on the event of Mozilla Community Rajasthan. As it was my first attempt, I was very hesitate of initiating and discussing it with my mentors, but after some minutes passed I was becoming smooth on my work. And The most motivating part was that I stood first for that 'One Day App Development'. Then I lauched it to the marketplace.<br> 
+						This was my first application named 'Stephen Hawking' and has submitted to Mozilla Marketplace. This has two versions -V1.0 and -V2.0. The first version was made in January, 2015 on the event of Mozilla Community Rajasthan. As it was my first attempt, I was unaware of web technologies but with help of my mentors, I initiated and completed it . And The most motivating part was that I stood first for that 'One Day App Development'. Then I deployed it to the marketplace.<br> 
 						Second version was made in August, 2015. It contains more functionality, more data with some eyecapturing UI.
 						</p> 
 						<br>
 						<h3>Technologies:</h3>
-						<p class="pstep">
-						HTML<br>
-						CSS<br>
-						JavaScript<br>
-						Bootstrap(framework)
+						<p id="psteps">
+						HTML &nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspCSS&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspJavaScript&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspBootstrap(framework)
 						</p>
 						<h3>Link:</h3>
 						<h6>Github: <a href="https://github.com/TwinkleChawla/Stephen_Hawking">Stephen Hawking</a></h6>
