--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<a href="#skills" data-toggle="tab"><i class="fa fa-database"></i><span>Skills</span></a>
 					<a href="#projects" data-toggle="tab"><i class="fa fa-th-large"></i><span>Projects</span></a>
 					<a href="#school" data-toggle="tab"><i class="fa fa-spinner"></i><span>Milestone</span></a>
+					<a href="Resume.pdf"><i class="fa fa-file"></i><span>Vita</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
 				</div>
 
