--- a/pages/cat.html
+++ b/pages/cat.html
@@ -32,14 +32,9 @@
 						This project was taken in September, 2015. We participated in TopCoders Hackathon where we are given many Environmental API's from which we have to choose any one with either Facebook or Twitter API. So, we choose Facebook API with Reliefweb API. As I was new to use API, I faced some problem in calling the functionalities. We completed our task during Hackathon. And on the submission day, we went to Manipal University, Jaipur. We enjoyed a lot because there were many interesting projects which our friends build and fun games made our day refreshing. All over the Hackathon, we had a great expirence and learned many concepts and Teamwork too.
 						</p>
 						<h3>Technologies:</h3>
-						<p class="pstep">
-						HTML<br>
-						CSS<br>
-						Bootstrap<br>
-						Javascript<br>
-						Jquery<br>
-						Facebook API<br>
-						ReliefWeb API
+						<p class="psteps">
+						HTML&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspCSS&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspBootstrap&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspJavascript&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspJquery&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbsp
+						Facebook API&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspReliefWeb API&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspJSON
 						</p>
 						<h3>Team Member:</h3>
 						<h6>Rakhi Sharma</h6>
