--- a/pages/plat.html
+++ b/pages/plat.html
@@ -32,12 +32,8 @@
 						It was a mini project assigned by our class mentor. In this project I learned creating and managing database. And successfully completed the task, scoring A+ grade.
 						</p>
 						<h3>Technologies:</h3>
-						<p class="pstep">
-						HTML<br>
-						CSS<br>
-						Bootstrap<br>
-						MySQL<br>
-						php
+						<p class="psteps">
+						HTML&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspCSS&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspBootstrap&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspMySQL&nbsp&nbsp&nbsp&nbsp|&nbsp&nbsp&nbsp&nbspPHP
 						</p>
 						<h3>Link:</h3>
 						<h6>Github: <a href="https://github.com/TwinkleChawla/Plateform_Assignment">Plateform Assignment</a></h6>
