--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href="#skills" data-toggle="tab"><i class="fa fa-database"></i><span>Skills</span></a>
 					<a href="#projects" data-toggle="tab"><i class="fa fa-th-large"></i><span>Projects</span></a>
 					<a href="#school" data-toggle="tab"><i class="fa fa-spinner"></i><span>Milestone</span></a>
-					<a href="Resume.pdf"><i class="fa fa-file"></i><span>Vita</span></a>
+					<a href="Resume.pdf"><i class="fa fa-file"></i><span>Resume</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
 				</div>
 
@@ -181,7 +181,8 @@
 								<li>Firefox Student Ambassador and Red Hat Certified System Administrator.</li>
 								<li>Active contributor of Mozilla Community.</li>
 								<li>Miss Fresher 1st Runner up.</li>
-								<li>Winner of Gyration (Dance) in Shradhanjali.</li>
+								<li>Winner of Gyration (Dance) in Shradhanjali,2013.</li>
+								<li>Runner Up of Don-De-Mod (Ramp) in Shradhanjali,2015.</li>
 								<li>Participated in Hackathon from Top Coders in Jaipur.</li>
 								<li>Attended Ethical Hacking workshop and Makers Party in Jaipur.</li>
 								</p>
