--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<h3><b>About</b></h3>
 						<hr/>
 						<p>
-							Hi, I am Twinkle Chawla, a web developer, Open source enthusiast and an active member of Mozilla. Currently, pursuing B.Tech in <b>Compurer Science Stream</b> from Arya College of Engg. & I.T. affiliated by <b>Rajasthan Technical University, Kota</b>. I am <b>Red Hat Certified System Adminstrator</b> and also a <b>Firefox Student Ambassador</b>. <br>
+							Hi, I am Twinkle Chawla, a web developer, Open source enthusiast and an active member of Mozilla. Currently, pursuing B.Tech in <b>Compurer Science</b> from Arya College of Engg. & I.T. affiliated by <b>Rajasthan Technical University</b>. I am <b>Red Hat Certified System Adminstrator</b> and also a <b>Firefox Student Ambassador</b>. <br>
 							I enjoy seeking logics and troubleshooting their miscellaneousness. I love to stir up my technical skills with my creative ideas. My simplicity and positivity makes me stand out among the rest.
 						</p>
 					</div>
@@ -185,6 +185,7 @@
 								<li>Runner Up of Don-De-Mod (Ramp) in Shradhanjali,2015.</li>
 								<li>Participated in Hackathon from Top Coders in Jaipur.</li>
 								<li>Attended Ethical Hacking workshop and Makers Party in Jaipur.</li>
+								<li>Attended PyConIndia 2015 in Bangalore.</li>
 								</p>
 							</ul>
 						</div>
