--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<h3><b>About</b></h3>
 						<hr/>
 						<p>
-							Hi, I am Twinkle Chawla, a web developer, Open source enthusiast and an active member of Mozilla. Currently, pursuing B.Tech in <b>Compurer Science</b> from Arya College of Engg. & I.T. affiliated by <b>Rajasthan Technical University</b>. I am <b>Red Hat Certified System Adminstrator</b> and also a <b>Firefox Student Ambassador</b>. <br>
+							Hi, I am Twinkle Chawla, a web developer, Open source enthusiast and an active member of Mozilla. Currently, pursuing B.Tech in <b>Computer Science</b> from Arya College of Engg. & I.T. affiliated by <b>Rajasthan Technical University</b>. I am <b>Red Hat Certified System Adminstrator</b> and also a <b>Firefox Student Ambassador</b>. <br>
 							I enjoy seeking logics and troubleshooting their miscellaneousness. I love to stir up my technical skills with my creative ideas. My simplicity and positivity makes me stand out among the rest.
 						</p>
 					</div>
@@ -93,6 +93,12 @@
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
 										<img src="img/git.png" width="60%">
+										<!-- <a href="#"><h3 class="skilltext">Github</h3></a> -->	
+									</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
+									<div class="ui-item">
+										<img src="img/ruby.png" width="60%">
 										<!-- <a href="#"><h3 class="skilltext">Github</h3></a> -->	
 									</div>
 								</div>
@@ -178,7 +184,8 @@
 							<h4>College:</h4>
 							<ul>
 								<p>
-								<li>Firefox Student Ambassador and Red Hat Certified System Administrator.</li>
+								<li>Firefox Student Ambassador</li>
+								<li>Red Hat Certified System Administrator and Red Hat Certified Engineer.</li>
 								<li>Active contributor of Mozilla Community.</li>
 								<li>Miss Fresher 1st Runner up.</li>
 								<li>Winner of Gyration (Dance) in Shradhanjali,2013.</li>
