--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<a href="#skills" data-toggle="tab"><i class="fa fa-database"></i><span>Skills</span></a>
 					<a href="#projects" data-toggle="tab"><i class="fa fa-th-large"></i><span>Projects</span></a>
 					<a href="#school" data-toggle="tab"><i class="fa fa-spinner"></i><span>Milestone</span></a>
-					<a href="Resume.pdf"><i class="fa fa-file"></i><span>Resume</span></a>
+					<a href="#resume" data-toggle="tab"><i class="fa fa-file"></i><span>Resume</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
 				</div>
 
@@ -196,6 +196,10 @@
 								</p>
 							</ul>
 						</div>
+					</div>
+
+					<div class="tab-pane fade clearfix" id="resume">
+						<iframe class="iframee col s12 m12 l12" src="Resume.pdf" style="height:700px;" frameborder="0"></iframe>
 					</div>
 
 					<div class="tab-pane fade clearfix" id="contact">
