--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					</div>
 
 					<div class="tab-pane fade clearfix" id="resume">
-						<iframe class="iframee col s12 m12 l12" src="Resume.pdf" style="height:700px;" frameborder="0"></iframe>
+					<iframe class="iframee col-md-12 col-sm-12 col-xs-12" src="Resume.pdf" style="height:700px;"></iframe>
 					</div>
 
 					<div class="tab-pane fade clearfix" id="contact">
