--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					</div>
 
 					<div class="tab-pane fade clearfix" id="resume">
-					<iframe class="iframee col-md-12 col-sm-12 col-xs-12" src="Resume.pdf" style="height:700px;"></iframe>
+						<iframe class="iframee col-md-12 col-sm-12 col-xs-12" src="Resume.pdf" style="height:700px; zoom: 0.75; -moz-transform: scale(1.3); -moz-transform-origin: 1 1;"></iframe>
 					</div>
 
 					<div class="tab-pane fade clearfix" id="contact">
@@ -221,6 +221,7 @@
 					</div>
 
 				</div>
+
 			</div>
 		</div>
 		<script src="js/jquery.js"></script>
