--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					</div>
 
 					<div class="tab-pane fade clearfix" id="resume">
-						<iframe class="iframee col-md-12 col-sm-12 col-xs-12" src="Resume.pdf" style="height:700px; zoom: 0.75; -moz-transform: scale(1.5); -moz-transform-origin: 1 1;"></iframe>
+						<iframe class="iframee col-md-12 col-sm-12 col-xs-12" src="Resume.pdf" style="height:700px; zoom: 0.75; -moz-transform: scale(1.3); -moz-transform-origin: 1 1;"></iframe>
 					</div>
 
 					<div class="tab-pane fade clearfix" id="contact">
@@ -238,6 +238,16 @@
 				});			
 			});
 		
+		</script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-71606327-1', 'auto');
+		  ga('send', 'pageview');
+
 		</script>
 	</body>	
 </html>
