--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<a href="#school" data-toggle="tab"><i class="fa fa-spinner"></i><span>Milestone</span></a>
 					<a href="#resume" data-toggle="tab"><i class="fa fa-file"></i><span>Resume</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
+					<a href="#blog" data-toggle="tab"><i class="fa fa-bold"></i><span>Blog</span></a>
 				</div>
 
 				<div class="tab-content">
@@ -217,6 +218,16 @@
 								<a href="https://plus.google.com/112546099252846134640/posts"><i class="fa fa-google-plus google-plus"></i></a>
 								<a href="https://github.com/TwinkleChawla"><i class="fa fa-github-alt github"></i></a>
 							</div>
+						</div>
+					</div>
+
+					<div class="tab-pane fade clearfix" id="blog">
+						<h3><b>Blog</b></h3>
+						<hr/>
+						<br>
+						<div class="ui-cdetails">
+							<p><b>January 14, 2016</b></p>
+							<a href="pages/blog1.html"><h4>Expanding Privacy</h4></a>
 						</div>
 					</div>
 
