--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -44,15 +44,25 @@
 						</p>
 						<div><center><img src="../img/img5.jpg" width="55%"></center</div>
 						<p class="psteps">
-						<a href="https://rakhisharma.github.io" style="color:#32C8DE">Rakhi Sharma</a> told us about "How to contribute in Mozilla!" and explained <a href="http://whatcanidoformozilla.org/">"What can I do for Mozilla"</a> 
+						<a href="https://rakhisharma.github.io" style="color:#32C8DE">Rakhi Sharma</a> told us about "How to contribute in Mozilla!" and explained <a href="http://whatcanidoformozilla.org/">"What can I do for Mozilla"</a>. Then she told us about "Bugs" and how to solve them for that She talked about some steps to contribute:
 						</p>
+						<center><ul style="list-style-type:square">
+							<li>Make an account on 	bugzilla.</li>
+							<li>Find Good First Bugs.</li>
+							<li>Asking the respective mentors to assign that bug for them.</li>
+							<li>Happy Coding!</li>
+						</ul></center>
+						<div><center><img src="../img/img3.jpg" width="55%"></center</div>
+						<p class="psteps"> Everybody at there enjoyed and inspired a lot with a hope of upcoming <b>WoMoz</b>.</p>
+						<div><center><img src="../img/img1.jpg" width="55%"></center</div>
+						<b><p class="psteps">#MCRprivacy &nbsp&nbsp&nbsp&nbsp #privacymonth &nbsp&nbsp&nbsp&nbsp #Advocate4privacy &nbsp&nbsp&nbsp&nbsp #ContributeToMozilla</p></b>
 					</div>
 				</div>
 			</div>
 		</div>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/placeholder.js"></script>bb
+		<script src="js/placeholder.js"></script>
 		<script src="js/respond.min.js"></script>
 		<script src="js/html5shiv.js"></script>
 		
