--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -29,7 +29,7 @@
 						"Remember Me" is a nature an individual to lessen their work. Did you ever considered that you are being shared with the globe? Is there any privacy between you and cyberspace? A big "NO" to this. Your indolent habit is directly pushing you to the non-isolated environment. So, <b>Privacy</b> should be a mission to compete with. 
 						</p>
 						<p class="psteps">
-						Recently, Everybody's facebook was shooted by TRAI, Free Basics and they just followed that unknowingly. This was the smart move by Facebook opposing "Net Neutrality", defining its own definitions for it. More than a million misleaded people in India wrote to TRAI opposing Net-Neutrality-violating corporate schemes like Free Basics. For this mislead, Mozilla took step providing <b>Privacy Month</b> as an act. And this is our duty to take this to the world and save our <b>Internet Privacy</b>.
+						Recently, Everybody's facebook was shooted by TRAI, Free Basics and they just followed that unknowingly. This was the smart move by Facebook changing the defination of "Net Neutrality". More than a million misleaded people in India unknowingly wrote to TRAI opposing Net-Neutrality-violating corporate schemes like Free Basics. For this mislead, Mozilla took step providing <b>Privacy Month</b> as an act. And this is our duty to take this to the world and save our <b>Internet Privacy</b>.
 						</p>	
 						<p class="psteps">
 						We, <b>WoMoz</b> took an initiative and headed a session in our Hostel with some newbees. I started with introducing Open Source, Mozilla Community and privacy issues with support of <a href="https://twitter.com/vidhimittal1996" style="color:#32C8DE">Vidhi Mittal</a>. 
@@ -38,7 +38,7 @@
 						<p class="psteps">
 						Then, I threw light on "Data Privacy", "how our data is being traced" and "why should we emphasize to stop leaking our data".
 						Then a Question arouse from the attendies , " How can we know who is tracking us?"
-						I told them to "Use LIGHTBEAM". and described them that how it shows us the graphical view tracking our data.
+						I told them to "Use LIGHTBEAM". and described them that how it shows us that which third party is tracking us.
 						Next, they asked "What are the ways we can isolate us from the web?"
 						I explained to use DuckDuckGo, private windows (incognito mode) and some addons which are specially made to make our data safe.
 						</p>
