--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -26,10 +26,10 @@
 						<h2 style="color:#32C8DE" class="psteps">Expanding Privacy</h2>
 						<h5 class="psteps">Right to privacy is a human right!</h5>
 						<p class="psteps">
-						"Remember Me" is a nature an individual to lessen their work. Did you ever considered that you are being shared with the globe? Is there any privacy between you and cyberspace? A big "NO" to this. Your indolent habit is directly pushing you to the non-isolated environment. So, <b>Privacy</b> should be a mission to compete with. 
+						"Remember Me" is a nature of an individual to lessen their work. Did you ever considered that you are being shared with others around the globe? Is there any privacy of your data in cyberspace? A big "NO" to this. Your indolent habit is directly pushing you to the non-isolated environment. So, <b>Privacy</b> should be a mission to taken seriously and work for. 
 						</p>
 						<p class="psteps">
-						Recently, Everybody's facebook was shooted by TRAI, Free Basics and they just followed that unknowingly. This was the smart move by Facebook changing the defination of "Net Neutrality". More than a million misleaded people in India unknowingly wrote to TRAI opposing Net-Neutrality-violating corporate schemes like Free Basics. For this mislead, Mozilla took step providing <b>Privacy Month</b> as an act. And this is our duty to take this to the world and save our <b>Internet Privacy</b>.
+						Recently, everybody's Facebook account was filled with freebasics notifications on the top and they just followed that unknowingly. This was the smart move by Facebook changing the defination of "Net Neutrality". More than a million misleaded people in India unknowingly wrote to TRAI opposing Net-Neutrality. For this mislead, Mozilla took step providing <b>Privacy Month</b> as an act. And this is our duty to take this to the world and save our <b>Internet Privacy</b>.
 						</p>	
 						<p class="psteps">
 						We, <b>WoMoz</b> took an initiative and headed a session in our Hostel with some newbees. I started with introducing Open Source, Mozilla Community and privacy issues with support of <a href="https://twitter.com/vidhimittal1996" style="color:#32C8DE">Vidhi Mittal</a>. 
