--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 					<a href="#resume" data-toggle="tab"><i class="fa fa-file"></i><span>Resume</span></a>
 					<a href="#contact" data-toggle="tab"><i class="fa fa-comment"></i><span>Contact</span></a>
 					<a href="#blog" data-toggle="tab"><i class="fa fa-bold"></i><span>Blog</span></a>
-				</div>
+					</div>
 
 				<div class="tab-content">
 					<div class="tab-pane active fade in" id="about">
-						<h3><b>About</b></h3>
+						<h3><b>About Me</b></h3>
 						<hr/>
 						<p>
-							Hi, I am Twinkle Chawla, a web developer, Open source enthusiast and an active member of Mozilla. Currently, pursuing B.Tech in <b>Computer Science</b> from Arya College of Engg. & I.T. affiliated by <b>Rajasthan Technical University</b>. I am <b>Red Hat Certified System Adminstrator</b> and also a <b>Firefox Student Ambassador</b>. <br>
-							I enjoy seeking logics and troubleshooting their miscellaneousness. I love to stir up my technical skills with my creative ideas. My simplicity and positivity makes me stand out among the rest.
+						Hi!! I am <b>Twinkle Chawla</b>, Currently pursuing my bachelors of technology  in computer science from arya college of engg. and I.T affiliated to Rajasthan Technical University. <br>
+						I am a tech lover, active learner and love to stir up my technical skills with my creative ideas. My simplicity, passion  about my work with a thirst to learn more and positivity makes me stand out among the rest.
 						</p>
 					</div>
 					
@@ -99,11 +99,42 @@
 								</div>
 								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
 									<div class="ui-item">
-										<img src="img/ruby.png" width="60%">
+										<img src="img/node.png" width="60%">
 										<!-- <a href="#"><h3 class="skilltext">Github</h3></a> -->	
 									</div>
 								</div>
 							</div>
+
+							<div class="row">
+								<br>
+									<h3 style="text-align:center; color:#32C8DE;">Development Tools</h3>
+								<br>
+								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
+									<div class="ui-item">
+										<img src="img/sublime.jpeg" width="70%">
+										<!-- <a href="#"><h3 class="skilltext">Ubuntu</h3></a> -->
+									</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
+									<div class="ui-item">
+										<img src="img/mysqlworkbench.jpeg" width="65%">
+										<!-- <a href="#"><h3 class="skilltext">RedHat</h3></a> -->
+									</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
+									<div class="ui-item">
+										<img src="img/postman.png" width="65%">
+										<!-- <a href="#"><h3 class="skilltext">Windows</h3></a> -->
+									</div>
+								</div>
+								<div class="col-md-4 col-sm-4 col-xs-4 col-mob">
+									<div class="ui-item">
+										<img src="img/webstorm.png" width="65%">
+										<!-- <a href="#"><h3 class="skilltext">Windows</h3></a> -->
+									</div>
+								</div>
+							</div>
+
 							<div class="row">
 								<br>
 									<h3 style="text-align:center; color:#32C8DE;">Operating Systems</h3>
@@ -185,6 +216,8 @@
 							<h4>College:</h4>
 							<ul>
 								<p>
+								<li>Scholar in LearnITGirl!, an international organisation.</li>
+								<li>Contributed in DuckDuckGo in DuckDuckHack, Jaipur.</li>
 								<li>Firefox Student Ambassador</li>
 								<li>Red Hat Certified System Administrator and Red Hat Certified Engineer.</li>
 								<li>Active contributor of Mozilla Community.</li>
@@ -212,7 +245,7 @@
 							<h3><i class="fa fa-comments-o"></i>  IRC-nick: twinklechawla</h3>
 							<br>
 							<div class="ui-social">
-								<a href="https://www.facebook.com/twinkle.chawla.9659"><i class="fa fa-facebook facebook"></i></a>
+								<a href="https://www.facebook.com/twinkle1chawla"><i class="fa fa-facebook facebook"></i></a>
 								<a href="https://twitter.com/twinkle1chawla"><i class="fa fa-twitter twitter"></i></a>
 								<a href="https://in.linkedin.com/in/twinkle1chawla"><i class="fa fa-linkedin linkedin"></i></a>
 								<a href="https://plus.google.com/112546099252846134640/posts"><i class="fa fa-google-plus google-plus"></i></a>
