--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						<h3><b>About Me</b></h3>
 						<hr/>
 						<p>
-						Hi!! I am <b>Twinkle Chawla</b>, Currently pursuing my bachelors of technology  in computer science from arya college of engg. and I.T affiliated to Rajasthan Technical University. <br>
-						I am a tech lover, active learner and love to stir up my technical skills with my creative ideas. My simplicity, passion  about my work with a thirst to learn more and positivity makes me stand out among the rest.
+						Hi!! I am <b>Twinkle Chawla</b>, Currently pursuing my <b>Bachelors of Technology</b> in <b>Computer Science</b> from Arya College of Engg. and I.T affiliated to Rajasthan Technical University.
+						I am a Tech lover, active learner and love to stir up my technical skills with my creative ideas. My simplicity, passion  about my work with a thirst to learn more and positivity makes me stand out among the rest.
 						</p>
 					</div>
 					
