--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<h3><b>About Me</b></h3>
 						<hr/>
 						<p>
-						Hi!! I am <b>Twinkle Chawla</b>, Currently pursuing my <b>Bachelors of Technology</b> in <b>Computer Science</b> from Arya College of Engg. and I.T affiliated to Rajasthan Technical University.
+						Hi!! I am <b>Twinkle Chawla</b>, Currently pursuing my <b>Bachelors of Technology</b> in <b>Computer Science</b> from Arya College of Engg. and I.T affiliated to Rajasthan Technical University.<br>
 						I am a Tech lover, active learner and love to stir up my technical skills with my creative ideas. My simplicity, passion  about my work with a thirst to learn more and positivity makes me stand out among the rest.
 						</p>
 					</div>
