--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<body>
 			
-		<div class="ui-67">
+		<div class="ui-67"> 
 		
 			<div class="ui-head bg-lblue">
 				<div class="ui-details">
@@ -257,10 +257,16 @@
 					<div class="tab-pane fade clearfix" id="blog">
 						<h3><b>Blog</b></h3>
 						<hr/>
+						<hr/>
 						<br>
 						<div class="ui-cdetails">
-							<p><b>January 14, 2016</b></p>
 							<a href="pages/blog1.html"><h4>Expanding Privacy</h4></a>
+							<p>January 14, 2016</p>
+						</div>
+						<hr>
+						<div class="ui-cdetails">
+							<a href="pages/blog2.html"><h4>PyCon India [2016]</h4></a>
+							<p>September 26, 2016</p>
 						</div>
 					</div>
 
