--- a/pages/blog2.html
+++ b/pages/blog2.html
@@ -37,14 +37,9 @@
 						</p>
 						<p class="psteps">
 						<b>Day 2</b><br>
-						This was the most remarkable Sunday. We checked in to the Convention Center, and had mouth watering breakfast. Then, we took our seats and the session started. We gave ear to the Keynote, and talks "Algorithmic Music Generation", "Don't write tests, generate them!", "Python in the Red Hat Family". Now the most happening moment arrived <b>"Introduction to PyLadies"</b>, which made me infatuated to work with the team. Then, I intented the representatives to work with them and was up to the minute of their activities and challenges. In the last, we had a lighting talk of "Outreachy - A program for women" where I was the active participant.
+						This was the most remarkable "Sunday". We checked in to the Convention Center, and had mouth watering breakfast. Then, we took our seats and the session started. We gave ear to the Keynote, and talks "Algorithmic Music Generation", "Don't write tests, generate them!", "Python in the Red Hat Family". Now the most happening moment arrived <b>"Introduction to PyLadies"</b>, which made me infatuated to work with the team. Then, I intented the representatives to work with them and was up to the minute of their activities and challenges. In the last, we had a lighting talk of "Outreachy - A program for women" where I was the active participant and enjoyed a lot with the speakers. In the last but not the least, we all new friends said our goodbyes and set off. 
 						</p>
-						<div><center><img src="../img/img4.jpg" width="55%"></center</div>
-						<p class="psteps">
-						
-						</p>
-						<p class="psteps"> Everybody at there enjoyed and inspired a lot with a hope of upcoming <b>WoMoz</b>.</p>
-						<b><p class="psteps">#MCRprivacy &nbsp&nbsp&nbsp&nbsp #privacymonth &nbsp&nbsp&nbsp&nbsp #Advocate4privacy &nbsp&nbsp&nbsp&nbsp #ContributeToMozilla</p></b>
+						<div><center><h5><b><a style="color:#32C8DE" href="blog2-img.html">Pictures</a></b></h5></center</div>
 					</div>
 				</div>
 			</div>
