--- a/pages/blog2-img.html
+++ b/pages/blog2-img.html
@@ -23,9 +23,11 @@
 			</div>
 				<div class="ui-content">
 					<div class="tab-content" style="margin-top:180px">
+						<div><center><img src="../img/py4.jpg" width="55%"></center</div>
 						<div><center><img src="../img/py2.jpg" width="55%"></center</div>
 						<div><center><img src="../img/py1.jpg" width="55%"></center</div>
 						<div><center><img src="../img/py3.jpg" width="55%"></center</div>
+						<div><center><img src="../img/py5.jpg" width="55%"></center</div>
 					</div>
 				</div>
 			</div>
