extra menu removed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="css/style-67.css" rel="stylesheet">
 	</head>
 	
-	<body>
+	<body oncontextmenu="return false">
 			
 		<div class="ui-67"> 
 		
